# fastapi-user-sample

./: .env.sample  Dockerfile  docker-compose.yaml  pyproject.toml  settings.py
api/: main.py
api/cruds/: user.py
api/models/: user.py
api/routers/: auth.py
api/schemas/: user.py
